# withBoost

./: .clangd  .gitignore  ARCHITECTURE.md  App.cpp  BUG_AND_FEATURE_SPEC.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.md  Core.cpp  Core.hpp  Error.md  IMPL_SPEC_RECONNECT_AND_WINDOW_SWAP.md  Network.json  README.md  REQUIREMENTS_GPU_PIPELINE_OPTIMIZATION.md  Refactoring.md  SWAP_ROOT_CAUSE_AND_FIX.md  SWAP_STREAMING_BUG_ANALYSIS.md  Settings.json  Settings.yaml  ToServer.md  VIDEO_STREAMING_SPEC.md  build_log.txt  build_log2.txt  do.md  log_dashboard.txt  ninja_clean_rebuild.txt  ninja_err.txt  ninja_err2.txt  ninja_err3.txt  prev_dash.qml  prev_dashboard.qml  vcpkg.json
Qt/Back/: AiImageModel.cpp  AiImageModel.hpp  AlarmController.cpp  AlarmController.hpp  AlarmManager.cpp  AlarmManager.hpp  AppController.cpp  AppController.hpp  Auth.cpp  Auth.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraModel.cpp  CameraModel.hpp  Device.cpp  Device.hpp  DeviceGraphItem.cpp  DeviceGraphItem.hpp  DeviceModel.cpp  DeviceModel.hpp  Login.cpp  Login.hpp  NetworkBridge.cpp  NetworkBridge.hpp  ServerStatus.cpp  ServerStatus.hpp  ServerStatusModel.cpp  ServerStatusModel.hpp  SettingsController.cpp  SettingsController.hpp  Signup.cpp  Signup.hpp  UserModel.cpp  UserModel.hpp  VideoFrameTexture.cpp  VideoFrameTexture.hpp  VideoManager.cpp  VideoManager.hpp  VideoNv12Material.cpp  (+7 more)
Qt/Back/Controllers/: AlarmController.cpp  AlarmController.hpp  AppController.cpp  AppController.hpp  AuthController.cpp  AuthController.hpp  SettingsController.cpp  SettingsController.hpp
Qt/Back/Models/: AiImageModel.cpp  AiImageModel.hpp  CameraModel.cpp  CameraModel.hpp  DeviceModel.cpp  DeviceModel.hpp  UserModel.cpp  UserModel.hpp
Qt/Back/Services/: AlarmManager.cpp  AlarmManager.hpp  NetworkBridge.cpp  NetworkBridge.hpp  ServerStatus.cpp  ServerStatus.hpp  VideoStream.cpp  VideoStream.hpp
Qt/Back/shaders/: nv12.frag  nv12.vert
Qt/Front/: CMakeLists.txt  Main.qml  Titlebar.qml
Qt/Front/Assets/: CMakeLists.txt
Qt/Front/Component/: AlarmCard.qml  BasicButton.qml  CameraCard.qml  CameraWindow.qml  CameraWindowTitlebar.qml  DeviceControlBar.qml  InputText.qml  NavItem.qml  SampleComponent.qml  SideNavPanel.qml  SystemButton.qml  VideoSurface.qml
Qt/Front/Component/Camera/: AiControlBar.qml  CameraWindowTitleBar.qml  DeviceContextMenu.qml
Qt/Front/Component/Dashboard/: AdminStatusBar.qml  DashboardContextMenu.qml  GridColumnSelector.qml
Qt/Front/Component/Device/: DeviceControlPanel.qml  LiveGraph.qml
Qt/Front/Component/camera/: AiContextMenu.qml  AiControlBar.qml  CameraCard.qml  CameraWindow.qml  DeviceContextMenu.qml
Qt/Front/Component/dashboard/: AdminStatusBar.qml  DashboardContextMenu.qml  GridColumnSelector.qml
Qt/Front/Component/device/: DeviceBadge.qml  DeviceControlBar.qml  DeviceControlPanel.qml  DeviceGraph.qml  LiveGraph.qml
Qt/Front/Component/user/: UserCard.qml
Qt/Front/Layout/: CameraSplitLayout.qml  DashboardLayout.qml  DeviceListLayout.qml  UserListLayout.qml
Qt/Front/Page/: AdminPage.qml  AiPage.qml  DashboardPage.qml  DevicePage.qml  SettingsPage.qml  SignupPage.qml
Qt/Front/Theme/: Icon.qml  Theme.qml  Typography.qml
Qt/Front/View/: AIPage.qml  AdminPage.qml  DashboardPage.qml  DashboardPage.qml.autosave  DevicePage.qml  HomePage.qml  LoginPage.qml  MyPage.qml  SettingsPage.qml  SignupPage.qml
Qt/Front/components/: AlarmCard.qml  BasicButton.qml  NavItem.qml  VideoSurface.qml
Qt/Front/components/camera/: AiContextMenu.qml  CameraCard.qml  CameraWindow.qml
Qt/Front/components/device/: DeviceBadge.qml  DeviceControlBar.qml
Qt/Front/components/user/: UserCard.qml
Qt/Front/layouts/: CameraSplitLayout.qml  DashboardLayout.qml  DeviceListLayout.qml  UserListLayout.qml
Qt/Front/pages/: AdminPage.qml  AiPage.qml  DashboardPage.qml  DevicePage.qml  LoginPage.qml  MyPage.qml
Src/: CMakeLists.txt  Config.hpp
Src/Crypt/: DtlsEngine.cpp  DtlsEngine.hpp  TlsEngine.cpp  TlsEngine.hpp
Src/Domain/: Alarm.cpp  Alarm.hpp  AlarmBridge.hpp  AlarmDispatcher.cpp  AlarmDispatcher.hpp  AlarmEvent.hpp  AlarmManager.cpp  AlarmManager.hpp  AuthBridge.cpp  AuthBridge.hpp  AuthManager.hpp  Camera.cpp  Camera.hpp  CameraBridge.cpp  CameraBridge.hpp  CameraData.hpp  CameraManager.cpp  CameraManager.hpp  CameraStore.cpp  CameraStore.hpp  Device.cpp  Device.hpp  DeviceData.hpp  DeviceStore.cpp  DeviceStore.hpp  IStore.hpp  ServerStatus.cpp  ServerStatus.hpp  ServerStatusData.hpp  ServerStatusStore.cpp  ServerStatusStore.hpp  StatusManager.cpp  StatusManager.hpp  User.hpp
Src/Network/: Header.hpp  INetworkService.hpp  MessageProcessor.cpp  MessageProcessor.hpp  NetworkEngine.cpp  NetworkEngine.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkProtocol.hpp  NetworkService.cpp  NetworkService.hpp  Protocol.hpp  Session.cpp  Session.hpp  SessionEngine.cpp  SessionEngine.hpp  TcpSession.hpp  Video.cpp  Video.hpp  VideoEngine.cpp  VideoEngine.hpp  Video_OLD_BACKUP.cpp  asio.md
Src/Thread/: ThreadEngine.cpp  ThreadEngine.hpp  ThreadPool.cpp  ThreadPool.hpp
cmake/: FindFFmpeg.cmake  SetupQWindowKit.cmake
